// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`d-flag.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/./d;

=====================================output=====================================
/./d;

================================================================================
`;

exports[`multiple-flags.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/.*/ms;
/.*/my;

=====================================output=====================================
/.*/ms;
/.*/my;

================================================================================
`;

exports[`regexp-modifiers.js [acorn] format 1`] = `
"Invalid regular expression: /(?ims:^[a-z])/: Invalid group (1:2)
> 1 | /(?ims:^[a-z])/u;
    |  ^
  2 | /(?-ims:^[a-z].)(^[a-z].)/uims;
  3 | /(?ims:^[a-z].1$)/;
  4 |
Cause: Invalid regular expression: /(?ims:^[a-z])/: Invalid group (1:1)"
`;

exports[`regexp-modifiers.js [espree] format 1`] = `
"Invalid regular expression: /(?ims:^[a-z])/: Invalid group (1:2)
> 1 | /(?ims:^[a-z])/u;
    |  ^
  2 | /(?-ims:^[a-z].)(^[a-z].)/uims;
  3 | /(?ims:^[a-z].1$)/;
  4 |
Cause: Invalid regular expression: /(?ims:^[a-z])/: Invalid group"
`;

exports[`regexp-modifiers.js [meriyah] format 1`] = `
"Unterminated regular expression (1:16)
> 1 | /(?ims:^[a-z])/u;
    |                ^
  2 | /(?-ims:^[a-z].)(^[a-z].)/uims;
  3 | /(?ims:^[a-z].1$)/;
  4 |
Cause: [1:16]: Unterminated regular expression"
`;

exports[`regexp-modifiers.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/(?ims:^[a-z])/u;
/(?-ims:^[a-z].)(^[a-z].)/uims;
/(?ims:^[a-z].1$)/;

=====================================output=====================================
/(?ims:^[a-z])/u;
/(?-ims:^[a-z].)(^[a-z].)/imsu;
/(?ims:^[a-z].1$)/;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/[/]\\/\\u0aBc/mgi;

=====================================output=====================================
/[/]\\/\\u0aBc/gim;

================================================================================
`;

exports[`v-flag.js [flow] format 1`] = `
"Invalid flags supplied to RegExp constructor 'v' (1:5)
> 1 | /a/v;
    |     ^
  2 |"
`;

exports[`v-flag.js [meriyah] format 1`] = `
"Unexpected regular expression flag (1:3)
> 1 | /a/v;
    |   ^
  2 |
Cause: [1:3]: Unexpected regular expression flag"
`;

exports[`v-flag.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/a/v;

=====================================output=====================================
/a/v;

================================================================================
`;
